Saving to S3 now works.  Moved more stuff into the Concordian object.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,21 @@
               <a href="#" class="btn login btn-primary">Login</a>
           </div>
       </div>
-    <!-- Initialize -->
+  <div class="s3open modal hide fade">
+      <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h3>S3 - Open File</h3>
+      </div>
+      <div class="modal-body">
+          <div class="error hide text-center"><p>There was an error. Please check your credentials.</p></div>
+          <table class="filetable">
+              <tr>
+                  <td>No files found.</td>
+              </tr>
+          </table>
+      </div>
+  </div>
+  <!-- Initialize -->
     <script src="js/concordian.js" type="text/javascript"></script>    
   </body>
 </html>
