--- a/index.html
+++ b/index.html
@@ -78,11 +78,7 @@
       </div>
       <div class="modal-body">
           <div class="error hide text-center"><p>There was an error. Please check your credentials.</p></div>
-          <table class="filetable">
-              <tr>
-                  <td>No files found.</td>
-              </tr>
-          </table>
+          <table class="filetable"></table>
       </div>
   </div>
   <!-- Initialize -->
